[package]
authors = ["Hugo Nogueira <hello@sardine.dev>"]
name = "swc-plugin-lightning-css"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sardinedev/swc-plugin-lightning-css"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.38.13", features = [
    "plugin_transform",
    "common",
    "ecma_ast",
    "ecma_parser",
    "ecma_utils",
    "ecma_visit",
] }

[dev-dependencies]
testing = "0.31.8"
swc_core = { features = ["testing_transform"], version = "0.38.13" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
