[package]
authors = ["Hugo Nogueira <hello@sardine.dev>"]
name = "swc-plugin-lightning-css"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/sardinedev/swc-plugin-lightning-css"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "0.39.0", features = [
    "plugin_transform",
    "common",
    "ecma_ast",
    "ecma_parser",
    "ecma_utils",
    "ecma_visit",
] }
walkdir = "2"

[dev-dependencies]
testing = "0.31.8"
swc_core = { features = ["testing_transform"], version = "0.39.0" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
